# tap-hubspot

./: .gitignore  README.md  config.sample.json  meltano.yml  pyproject.toml  setup.py  tox.ini
.devcontainer/: devcontainer.json
.github/workflows/: ci_workflow.yml
tap_hubspot/: __init__.py  client.py  streams.py  tap.py
tap_hubspot/schemas/: tickets.json
tap_hubspot/streams/: __init__.py  calls.py  calls_associations.py  companies.py  company_associations.py  contact_associations.py  contacts.py  deals.py  deals_associations.py  deals_pipelines.py  emails.py  meetings.py  notes.py  owners.py  task_associations.py  tasks.py  tickets.py  tickets_associations.py  tickets_pipelines.py
tap_hubspot/tests/: test_batches.py  test_core.py  test_records.py
tests/: client.py
