[tool.poetry]
name = "tap-hubspot"
version = "0.2.1"
description = "`tap-hubspot` is a Singer tap for HubSpot, built with the Meltano SDK for Singer Taps."
authors = ["YouCruit"]
keywords = [
    "ELT",
    "HubSpot",
]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "<3.11,>=3.9"
requests = "^2.25.1"
singer-sdk = "^0.13.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
tox = "^3.24.5"
flake8 = "^4.0.1"
black = "^22.1"
pydocstyle = "^6.1.1"
mypy = "^0.991"
types-requests = "^2.27.11"
coverage = "^6.2"
isort = "^5.10.1"
types-python-dateutil = "^2.8.2"

[tool.isort]
profile = "black"
multi_line_output = 3 # Vertical Hanging Indent
src_paths = "tap_hubspot"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-hubspot = 'tap_hubspot.tap:TapHubSpot.cli'
